test/library/standard/Sort/errors/sortDomainArray.sparse3.good
sortDomainArray.chpl:35: error: sorted() is currently only supported on associative domains
